--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
         "start": "vercel dev"
     },
     "dependencies": {
-        "node-fetch": "^2.6.7"
+        "node-fetch": "^2.6.7",
+        "chart.js": "^3.9.1"
     },
     "devDependencies": {
         "vercel": "^28.16.5"
