--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,8 @@
         {
             "source": "/(.*)",
             "headers": [
-                { "key": "Access-Control-Allow-Origin", "value": "*" }
+                { "key": "Access-Control-Allow-Origin", "value": "*" },
+                { "key": "Cache-Control", "value": "s-maxage=300" }
             ]
         }
     ]
