--- a/vercel.json
+++ b/vercel.json
@@ -12,3 +12,12 @@
         }
     ]
 }
+{
+  "headers": [{
+    "source": "/api/(.*)",
+    "headers": [
+      { "key": "Access-Control-Allow-Origin", "value": "*" },
+      { "key": "Access-Control-Allow-Methods", "value": "GET" }
+    ]
+  }]
+}
