更新 package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weather-app",
   "version": "1.0.0",
+  "type": "module", // 新增这行
   "scripts": {
     "start": "node server.js"
   },
