--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather-app",
   "version": "1.0.0",
-  "type": "module", // 新增这行
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
