--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "weather-app",
-  "version": "1.0.0",
-  "type": "module",
+  "name": "weather-website",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
