--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,13 @@
   "builds": [
     {
       "src": "server.js",
-      "use": "@vercel/node"
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "views/**",
+          "public/**"
+        ]
+      }
     }
   ],
   "routes": [
